# RaptureVK

./: .clang-format  .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  README.md  TODO.md  Untitled-1.md  compile_commands.json  get_vendor_libs.bat  get_vendor_libs.sh  setup_compile_commands.sh
Editor/: CMakeLists.txt
Editor/src/: EntryPoint.h  main.cpp  source.cpp
Editor/src/Layers/: AmethystLayer.cpp  AmethystLayer.h  TestLayer.cpp  TestLayer.h  imguiLayer.cpp  imguiLayer.h
Editor/src/imguiPanels/: BottomBarPanel.cpp  BottomBarPanel.h  BrowserPanel.cpp  BrowserPanel.h  ContentBrowserPanel.cpp  ContentBrowserPanel.h  GBufferPanel.cpp  GBufferPanel.h  GraphEditorPanel.cpp  GraphEditorPanel.h  ImageViewerPanel.cpp  ImageViewerPanel.h  ImportAssetPanel.h  PropertiesPanel.cpp  PropertiesPanel.h  ProprtiesPanel.cpp  ProprtiesPanel.h  SettingsPanel.cpp  SettingsPanel.h  TextureGeneratorPanel.cpp  TextureGeneratorPanel.h  ViewportPanel.cpp  ViewportPanel.h  imguiPanelStyle.h  imguiPanelStyleLinear.h
Editor/src/layers/: AmethystLayer.cpp  AmethystLayer.h  EditorLayout.h  TestLayer.cpp  TestLayer.h
Engine/: CMakeLists.txt  MDI and new material system.md
Engine/assets/: compile_shaders.bat  compile_shaders.sh
Engine/src/: main.cpp  source.cpp
Engine/src/AccelerationStructures/: BLAS.cpp  BLAS.h  TLAS.cpp  TLAS.h
Engine/src/AssetManager/: Asset.cpp  Asset.h  AssetCommon.h  AssetHelpers.h  AssetImportConfig.h  AssetImporter.cpp  AssetImporter.h  AssetLoadRequests.h  AssetManager.h  AssetManagerBase.h  AssetManagerEditor.cpp  AssetManagerEditor.h  AssetManagerStaticInitializers.cpp  README.md
Engine/src/Buffers/: BufferPool.cpp  BufferPool.h  Buffers.cpp  Buffers.h  README.md
Engine/src/Components/: Components.h  ComponentsCommon.h  FogComponent.h  HierarchyComponent.h  IndirectLightingComponent.h  TerrainComponent.h
Engine/src/Events/: ApplicationEvents.h  AssetEvents.h  Events.h  GameEvents.h  InputEvents.h  ProjectEvents.h
Engine/src/Input/: Input.h
Engine/src/Layers/: Layer.h  LayerStack.cpp  LayerStack.h
Engine/src/Loaders/: SceneFileCommon.h
Engine/src/Logging/: Log.cpp  Log.h  TracyProfiler.cpp  TracyProfiler.h
Engine/src/Materials/: Material.cpp  Material.h  MaterialInstance.cpp  MaterialInstance.h  MaterialParameters.cpp  MaterialParameters.h  PROCEDURAL_MATERIALS_DESIGN.md
Engine/src/Meshes/: Mesh.cpp  Mesh.h  MeshPrimitives.cpp  MeshPrimitives.h
Engine/src/Physics/: Entropy.cpp  Entropy.h  EntropyCommon.h  EntropyComponents.h  EntropyParticle.h  precision.h
Engine/src/Pipelines/: ComputePipeline.cpp  ComputePipeline.h  GraphicsPipeline.cpp  GraphicsPipeline.h  Pipeline.h
Engine/src/RenderTargets/: SceneRenderTarget.cpp  SceneRenderTarget.h
Engine/src/Renderer/: InstancedShapesPass.cpp  InstancedShapesPass.h  MDIBatch.cpp  MDIBatch.h  README.md  RtInstanceData.cpp  RtInstanceData.h  SkyboxPass.cpp  SkyboxPass.h  StencilBorderPass.cpp  StencilBorderPass.h
Engine/src/Scenes/: Project.h  Scene.cpp  Scene.h  SceneManager.h  World.h
Engine/src/Shaders/: Shader.cpp  Shader.h  ShaderCommon.h  ShaderCompilation.cpp  ShaderCompilation.h  ShaderReflections.cpp  ShaderReflections.h
Engine/src/Textures/: Texture.cpp  Texture.h  TextureCommon.h
Engine/src/Utils/: GLTypes.h  TextureFlattener.cpp  TextureFlattener.h  Timestep.cpp  Timestep.h  UUID.cpp  UUID.h  io.cpp  io.h  rp_assert.h
Engine/src/WindowContext/: Application.cpp  Application.h  WindowContext.h
Engine/src/acceleration_structures/: BLAS.cpp  BLAS.h  TLAS.cpp  TLAS.h
Engine/src/asset_manager/: Asset.h  AssetCommon.h  AssetHelpers.h  AssetImportConfig.h  AssetImporter.cpp  AssetImporter.h  AssetManager.h  AssetManagerBase.h  AssetManagerEditor.cpp
Engine/src/buffers/: BufferLayout.cpp  BufferLayout.h  BufferPool.cpp  BufferPool.h  Buffers.cpp  Buffers.h  IndexBuffer.cpp  IndexBuffer.h  StorageBuffer.cpp  StorageBuffer.h  UniformBuffer.cpp  UniformBuffer.h  VertexBuffer.cpp  VertexBuffer.h
Engine/src/cameras/: CameraCommon.h  PerspectiveCamera.cpp  PerspectiveCamera.h
Engine/src/components/: AnimationComponent.h  Components.h  FogComponent.h  HierarchyComponent.h  TerrainComponent.h
Engine/src/events/: ApplicationEvents.h  AssetEvents.h  GameEvents.h  InputEvents.h
Engine/src/input/: Input.h  Keybinds.h
Engine/src/jobs/: Counter.cpp  Counter.h  Fiber.cpp  Fiber.h  InplaceFunction.h  JOB_SYSTEM_DESIGN.md  Job.cpp  Job.h  JobCommon.h  JobQueue.cpp  JobQueue.h  JobSystem.cpp  JobSystem.h  LockFreeBucketMap.h  LockFreeStack.h  WaitList.cpp  WaitList.h
Engine/src/layers/: Layer.h  LayerStack.cpp  LayerStack.h
Engine/src/loaders/: SceneFileCommon.h
Engine/src/logging/: Log.cpp  Log.h  TracyProfiler.cpp  TracyProfiler.h
Engine/src/materials/: Material.cpp  Material.h  MaterialData.h  MaterialInstance.cpp  MaterialInstance.h  (+2 more)
(+944 files in other folders)
